--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ body{
     line-height: 1.05;
     margin-bottom: 3.2rem;
     color: #333;
+    transform: translateX(2px)
 }
 
 .hero-description{
@@ -209,13 +210,55 @@ body{
 
 .margin{
     padding-top: 1rem;
+    padding-top: 1rem;
 }
+
+.hero-content{
+    animation: margin 1.1s linear ;
+}
+
+@keyframes margin{
+    0%{
+        transform: translateX(-100%);
+        opacity: 0;
+    }
+
+    50%{
+        transform: translateX(-50%);
+        opacity: .8;
+    }
+
+    100%{
+        opacity: 1;
+        transform: translateX(0%);
+    }
+}
+
+
 .hero .hero-img{
     width: 100%;
+    animation: up 1.1s linear;
 }
+
+
 
 .hero.heroimg{
     display: flex;
+}
+
+@keyframes up{
+    0%{
+        transform: translateY(100%);
+        opacity: 0;
+    }
+    50%{
+        transform: translateY(50%);
+        opacity: .8;
+    }
+    100%{
+        transform: translateY(0%);
+        opacity: 1;
+    }
 }
 
 .customers-area{
@@ -489,6 +532,11 @@ body{
 
 .gallery img{
     width: 100%;
+    transition: all .2s linear;
+}
+
+.gallery img:hover{
+    transform: scale(1.1);
 }
 /* Testimonials Section ends here */
 
