--- a/css/style.css
+++ b/css/style.css
@@ -214,18 +214,18 @@ body{
 }
 
 .hero-content{
-    animation: margin 1.1s linear ;
+    animation: margin .8s linear ;
 }
 
 @keyframes margin{
     0%{
-        transform: translateX(-100%);
+        transform: translateX(-10%);
         opacity: 0;
     }
 
     50%{
-        transform: translateX(-50%);
-        opacity: .8;
+        transform: translateX(-5%);
+        opacity: .5;
     }
 
     100%{
@@ -237,7 +237,7 @@ body{
 
 .hero .hero-img{
     width: 100%;
-    animation: up 1.1s linear;
+    animation: up .8s linear;
 }
 
 
@@ -248,12 +248,12 @@ body{
 
 @keyframes up{
     0%{
-        transform: translateY(100%);
+        transform: translateY(10%);
         opacity: 0;
     }
     50%{
-        transform: translateY(50%);
-        opacity: .8;
+        transform: translateY(5%);
+        opacity: .5;
     }
     100%{
         transform: translateY(0%);
@@ -791,7 +791,9 @@ body{
 }
 
 .footer-box .copyright span{
-    font-weight: 500;
+    font-weight: 600;
+    display:inline-block;
+    margin:2rem 0;
 }
 
 .links:hover{
